--- a/css/responsive.css
+++ b/css/responsive.css
@@ -164,6 +164,15 @@
     .btn-pdf::after{
         display: none;
     }
+    .footer-links-wrap{
+        padding-left: 0;
+        justify-content: center;
+        height: auto;
+        margin: 30px 0;
+    }
+    .copyright-wrap {display: grid;justify-content: center;}
+    .social-links-wrap.tm-view{text-align: center;margin-bottom:20px;color: transparent;}
+    .social-links-wrap.tm-view a{margin: 0 5px;}
 }
 
 /* Small devices (landscape phones, less than 768px) */
